--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@
     	<div class="number">25927</div>
 	</div>
 
+<div class="row" onclick="location.href='tel:6177326639';">
+		<div class="name"> <img src="interpreter.png" class="icon"> Phone Interpreter </div>
+    	<div class="number">26639</div>
+	</div>
+
 <div class="header">Radiation Oncology Department</div>
 
 <div class="row" onclick="location.href='tel:6177326310';">
