--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     	<div class="number">23000</div>
 	</div>
 
-<div class="row" onclick="location.href='tel:6177325636';">
+<div class="row" onclick="location.href='tel:6177325636,2';">
 		<div class="name"> <img src="Cross_Tight.png" class="icon"> BWH Emergency Dept</div>
     	<div class="number">25636</div>
 	</div>
