--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     	<div class="number"><input pattern="\d*" maxlength="5" id="ext" placeholder="Ext #" onkeyup="tryDialExtension(event);" autocomplete="off" /></div>
 	</div>
 
-<div class="row" onclick="location.href='tel:6177325500';">
+<div class="row" onclick="location.href='tel:6177325500,0';">
 		<div class="name"><img src="BWH_Tight.png" class="icon"> BWH Main Line</div>
     	<div class="number">25500</div>
 	</div>
