--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<HTML>
+﻿<HTML>
 <HEADER>
 	<TITLE> RO PHONE - BWH </TITLE>
 	<meta charset="utf-8"> 
@@ -171,9 +171,9 @@
 	</div>
 
 
-<div class="row" onclick="location.href='tel:6177324191';">
+<div class="row" onclick="location.href='tel:6175828638';">
 		<div class="name"><img src="Pink_Tight.png" class="icon"> Pink Machine</div>
-    	<div class="number">24191</div>
+    	<div class="number">28638</div>
 	</div>
 
 
